// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works for GroupTopic 1`] = `
{
  "graphql": {
    "query": "mutation($id: ID, $data: GroupTopicFollowInput) {
    updateGroupTopicFollow(id: $id, data: $data) {
      success
    }
  }",
    "variables": {
      "data": {
        "newPostCount": 0,
      },
      "id": 5,
    },
  },
  "meta": {
    "id": 5,
    "optimistic": true,
    "type": "GroupTopic",
  },
  "type": "RESET_NEW_POST_COUNT",
}
`;

exports[`works for Membership 1`] = `
{
  "graphql": {
    "query": "mutation($id: ID, $data: MembershipInput) {
    updateMembership(groupId: $id, data: $data) {
      id
    }
  }",
    "variables": {
      "data": {
        "newPostCount": 0,
      },
      "id": 5,
    },
  },
  "meta": {
    "id": 5,
    "optimistic": true,
    "type": "Membership",
  },
  "type": "RESET_NEW_POST_COUNT",
}
`;
